src/test/deca/context/valid/convfloat.deca
// Description:
//    conversion from int to float
//
// Resultats:
//    ok
// 
// Historique:
//    cree le 01/01/2022

{
   int b=5;
   float a = b;

   float c = 1;

   float d= 42+ 10 +2;

}